@@ -30,14 +30,21 @@ includeTemplate("overall.header");
  * This is the normal header used at:
  *
  *	- Gallery Startpage
- *	- Searchpage
- *	- Adminpage
+ *	- Search Page				search.php
+ *	- Admin Page				admin-page.php
+ *	- Login Page				login.php
+ * 	- Stats Wizard				stats-wizard.php
+ *	- Usage Page				usage.php
  *	- tools/despam-comments.php
  *	- tools/find_orphans.php
  *	- tools/validate_albums.php
+ *
+ *	- templates/classic_sidebar/gallery.tpl.default
+ *	- templates/classic/gallery.tpl.default
 */
 
 ?>
+    <div class="g-headerbox">
 	<table class="g-header" cellspacing="0" cellpadding="0" width="100%">
 		<tr>
 			<td class="g-pagetitle-left"></td>
@@ -45,3 +52,5 @@ includeTemplate("overall.header");
 			<td class="g-pagetitle-right"></td>
 		</tr>
 	</table>
+
+
