@@ -33,6 +33,7 @@ global $g_pageTitle;
  *	- Imagemap
 */
 ?>
+    <div class="g-headerbox">
 	<table class="g-header" cellspacing="0" cellpadding="0" width="100%">
 		<tr>
 			<td class="g-pagetitle-left"></td>
